# haskell-exercises

./: .gitignore  README.md
aeson/: json-examples.cabal
aeson/src/: Main.hs  Time.hs
persistent-yesod/: README.md  lunchline.cabal
persistent-yesod/app/: BudgetCommons.hs  BudgetDB.hs  BudgetMgr.hs  CalUtils.hs  Config.hs  InitDB.hs  LineItemDB.hs  LineItemMgr.hs
persistent-yesod/config/: routes  settings.yaml
persistent-yesod/src/: CMDLineApp.hs  Main.hs
persistent-yesod/web/: Handlers.hs  Main.hs  Orphans.hs  Routes.hs  WebApp.hs
persistent-yesod/web/handlers/: GetHandlers.hs  PostLineItem.hs  UpdateBudget.hs
persistent-yesod/web/models/: AppConfig.hs  RunningWeekItems.hs  WeeklySpendHistory.hs  WeeklySummary.hs
snippets/: DoubleMaybes.hs  ExceptT.hs  MonomorphicRestriction.hs
