name:                json-examples
version:             1.4.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lunchline#readme
license:             BSD3
license-file:        LICENSE
author:              Frederico Ramos
maintainer:          fred@mercury.com
copyright:           2022 Frederico Ramos
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable json-examples
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       aeson,
                       text

