name:                lunchline
version:             1.3.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lunchline#readme
license:             BSD3
license-file:        LICENSE
author:              Frederico Ramos
maintainer:          fred@mercury.com
copyright:           2022 Frederico Ramos
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      app
  exposed-modules:     InitDB,
                       CalcUtils,
                       Config,
                       LineItemDB,
                       LineItemMgr,
                       BudgetDB,
                       BudgetMgr
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       persistent,
                       persistent-postgresql,
                       persistent-template,
                       mtl,
                       resource-pool,
                       monad-logger,
                       esqueleto,
                       hledger-lib,
                       time,
                       yaml,
                       aeson,
                       text

executable lunchline-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       lunchline



executable lunchline-web
  hs-source-dirs:      web
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       lunchline,
                       yesod,
                       yesod-core,
                       resourcet